pulseaudio (1.1-3) UNRELEASED; urgency=low

  * Tighten dependencies for packages that uses the internal helper library
    (Closes: 651716)
  * Move libpulsecommon and libpulsedsp to a pkglib (Closes: 651717)
  * Fix svolume compilation on arm (Closes: 657117)

 -- Sjoerd Simons <sjoerd@debian.org>  Wed, 15 Feb 2012 22:37:49 +0100

pulseaudio (1.1-2) unstable; urgency=low

  * debian/libpulse0.symbols: Tighten depends for packages using the private
    libpulsecommon library (Closes: 647236)

 -- Sjoerd Simons <sjoerd@debian.org>  Fri, 25 Nov 2011 22:04:51 +0100

pulseaudio (1.1-1) unstable; urgency=low

  * New upstream bugfix release
  * debian/libpulse0.symbols: Soname of internal libpulsecommon library bumped
  * debian/control: Update standards version

 -- Sjoerd Simons <sjoerd@debian.org>  Sun, 23 Oct 2011 11:08:01 +0200

pulseaudio (1.0-4) unstable; urgency=low

  * debian/control: Don't depend on libasound2-plugins on kfreebsd
    and the hurd (Closes: #643966)

 -- Sjoerd Simons <sjoerd@debian.org>  Sat, 01 Oct 2011 13:15:54 +0100

pulseaudio (1.0-3) unstable; urgency=low

  * debian/libpulse-mainloop-glib0.symbols: Actually fix the naming...

 -- Sjoerd Simons <sjoerd@debian.org>  Thu, 29 Sep 2011 11:21:32 +0100

pulseaudio (1.0-2) unstable; urgency=low

  * debian/libpulse-mainloop-glib0.symbols:
    + Fix the naming of the package providing this library (Closes: #639892)
  * debian/rules: Install modules in /usr/lib/pulse-1.0

 -- Sjoerd Simons <sjoerd@debian.org>  Wed, 28 Sep 2011 07:25:08 +0100

pulseaudio (1.0-1) unstable; urgency=low

  * New upstream release
  * debian/source/options: Switch to xz compression
  * debian/gbp.conf: Switch to xz compression

 -- Sjoerd Simons <sjoerd@debian.org>  Wed, 28 Sep 2011 00:52:27 +0100

pulseaudio (0.99.4-1) experimental; urgency=low

  * New upstream release
  * debian/libpulse0.symbols: Updated

 -- Sjoerd Simons <sjoerd@debian.org>  Fri, 16 Sep 2011 21:23:47 +0100
