@@ -4,8 +4,10 @@ pulseaudio (1.1-3) UNRELEASED; urgency=low
     (Closes: 651716)
   * Move libpulsecommon and libpulsedsp to a pkglib (Closes: 651717)
   * Fix svolume compilation on arm (Closes: 657117)
+  * Move the alsa pulse.conf file to /usr/share/alsa/alsa.conf.d to follow the
+    alsa-lib 1.0.25 changes
 
- -- Sjoerd Simons <sjoerd@debian.org>  Wed, 15 Feb 2012 22:37:49 +0100
+ -- Sjoerd Simons <sjoerd@debian.org>  Sun, 19 Feb 2012 13:08:18 +0100
 
 pulseaudio (1.1-2) unstable; urgency=low
 
